# Telegram-Contest

./: README.md
Dataset/: Dataset.ipynb
Language Recognition/: Language Recognition Dataset.ipynb
Topic Modelling/: ENG Topic Modelling.ipynb  RU Topic Modelling.ipynb
libtgcat/: CMakeLists.txt
libtgcat/src/: tgcat.cpp
